docs/_static/style.css
/* ... */
/* Scrollbar related */

#sidebar::-webkit-scrollbar {
  width: 0.5em;
}

#sidebar::-webkit-scrollbar-thumb {
  background-color: var(--scrollbar);
  border-radius: 0.25em;
}

#sidebar::-webkit-scrollbar-thumb:hover {
  background-color: var(--scrollbar-hover);
}


/* grid related */

.main-grid {
  display: grid;
  min-height: 100%;
  grid-auto-rows: min-content auto min-content;
  grid-template-columns: minmax(0, 1fr);
  grid-template-areas:
    "s"
    "h"
    "n"
    "c"
    "f";
}

.grid-item {
  max-width: 100vw;
  padding: 0.8em;
}

/* all URLs only show underline on hover */
a {
  text-decoration: none;
  color: var(--link-text);
}

a:hover {
  text-decoration: underline;
  color: var(--link-hover-text);
}

/* headers */

header.grid-item {
  grid-area: h;
  color: var(--main-text);
  position: relative;
  z-index: 1;
  padding: 0;
}

header > nav {
  background-color: var(--sub-header-background);
  padding: 0.8em;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
}

header > nav a {
  color: var(--white);
}

header > nav.mobile-only {
  width: 100%;
  position: absolute;
  top: 0;
  right: 0;
  z-index: -1;
  padding-top: 0;
  transition: top 0.5s ease-in-out;
}

header > nav.mobile-only .search {
  width: 100%;
}

header > nav.mobile-only .search-wrapper {
  background-color: var(--sub-header-background);
}

.main-heading {
  margin-right: auto;
}

header > nav a:not(.main-heading) {
  margin: 0 0.5em;
}

header > nav > a:hover {
  color: var(--grey-1-8);
  text-decoration: underline;
}

.sub-header {
  grid-area: n;
  background-color: var(--sub-header-background);
  color: var(--white);
  display: none;
}

/* these aren't shown on mobile */

.sub-header > label {
  display: none;
  margin-right: 1em;
}

.sub-header > select {
  display: none;
  background-color: transparent;
  padding: 0.4em 0;
  font-size: 1em;
  width: 13.5%;
  color: white;
  border: none;
  border-bottom: 1px solid var(--search-border);

  appearance: none;
  background-image: url('drop_down_icon.svg');
  background-repeat: no-repeat;
  background-position-x: 100%;
  background-position-y: 50%;

  cursor: pointer;
}

.sub-header option {
    color: black;
}

.sub-header > select:focus {
  outline: none;
}

.sub-header > .settings {
  color: var(--settings);
  display: none;
  margin-left: 1em;
  margin-right: 0.5em;
}

.setting h3 {
  display: inline-block;
  margin-left: 2em;
}

.sub-header > .settings:hover {
  color: var(--settings-hover);
}

/* footer stuff */
footer {
  grid-area: f;
  font-size: 14px;
  text-align: right;
  color: var(--footer-text);
}

footer a {
  text-decoration: underline;
  color: var(--footer-link);
}

/* sidebar stuff */

aside {
  grid-area: s;
  font-size: 14px;
  line-height: 1.75em;
  top: 0;
  position: -webkit-sticky; /* safari */
  position: sticky;
  background-color: var(--mobile-nav-background);
  color: var(--mobile-nav-text);
  z-index: 2;
  max-height: 100vh;
  overflow-y: auto;
  overscroll-behavior-y: contain;
}

aside h3 {
  color: var(--mobile-nav-header-text);
  font-size: 24px;
  font-weight: normal;
}

.collapsible-arrow {
  font-size: 1.5em!important;
  left: -1.166em;
  top: 0.25em;
  user-select: none;
  position: relative;
  line-height: 0.5em;
  transition: transform 0.4s;
  transform: rotate(-90deg);
}

.expanded {
  transition: transform 0.4s;
  transform: rotate(0deg);
}

.ref-internal-padding {
  position: relative;
  left: -20px;
}

#settings-toggle {
  float: right;
}

aside .material-icons,
.settings > .material-icons {
  cursor: pointer;
  font-size: 2em;
}

.sidebar-toggle {
  display: unset !important;
}

#sidebar {
  display: none;
}

#sidebar a {
  color: var(--mobile-nav-text);
}

#sidebar a:hover {
  color: var(--mobile-nav-hover-text);
}

#sidebar h3 {
  font-size: 24px;
  margin: 1em 1em 0 0;
}

#sidebar ul {
  list-style: none;
  margin: 1em 2em 2em 1em;
  padding: 0;
}

#sidebar ul ul {
  list-style: square;
  margin: 0em;
  margin-left: 1.5em;
}

#sidebar li.no-list-style {
  list-style: none;
}

#sidebar form {
  margin: 1em 0;
  display: flex;
  align-items: baseline;
}

/* search button stuff */

.search-wrapper {
  display: flex;
  align-items: stretch;
}

.search-wrapper > input[type=search] {
  font-family: "Roboto", Corbel, Avenir, "Lucida Grande", "Lucida Sans", sans-serif;
  outline: none;
  appearance: none;
  font-size: 1em;
}

.search-wrapper > input[type=search],
.search-wrapper > button[type=submit] {
  background-color: var(--sub-header-background);
  border: none;
  color: var(--search-text);
  padding: 0.5em;
  min-height: 2.5em;
  flex: 9;
}

.search-wrapper {
  border-bottom: 1px solid var(--search-border);
}

.search-wrapper:focus-within {
  border-bottom: 1px solid var(--search-focus);
}

/* .search-wrapper > input[type=search] {
  border: 1px solid var(--search-border);
  border-right: none;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.search-wrapper > input[type=search]:focus,
button[type=submit]:focus ~ input[type=search] {
  border: 1px solid var(--search-focus);
  border-right: none;
} */

.search-wrapper > button[type=submit] {
  color: var(--search-button);
  /* border: 1px solid var(--search-border); */
  /* border-left: none; */
  /* border-bottom-right-radius: 4px; */
  /* border-top-right-radius: 4px; */
  cursor: pointer;
  flex: 1;
}

/* .search-wrapper > button[type=submit]:focus,
input[type=search]:focus ~ button[type=submit] {
  border: 1px solid var(--search-focus);
  border-left: none;
} */

.search-wrapper > button[type=submit]:hover {
  background-color: var(--search-border);
  color: var(--search-button-hover);
}

/* search sidebar */

.search-sidebar > input[type=search],
.search-sidebar > button[type=submit] {
  background-color: var(--search-sidebar-background);
  color: var(--search-sidebar-text);
}
/* ... */

